--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -12,19 +12,28 @@ source:
   sha256: {{ sha256 }}
 
 build:
-  number: 1
+  number: 0
+  skip: True  # [py<36]
   script: pip install --no-deps .
 
 requirements:
   host:
     - python
     - pip
+    - wheel
+    - setuptools
   run:
-    - python
+    - python >=3.6
 
 test:
   imports:
     - pandocfilters
+  requires:
+    - pip
+    - python <3.10
+  commands:
+    - pip check
+
 
 about:
   home: https://github.com/jgm/pandocfilters
@@ -34,6 +43,8 @@ about:
   summary: 'A python module for writing pandoc filters'
 
   dev_url: https://github.com/jgm/pandocfilters
+  # the documentation was updated according to pypi.org
+  doc_url: https://pandoc.org/filters.html
 
 extra:
   recipe-maintainers:
