update pandocfilter to version 1.5.0

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -23,14 +23,13 @@ requirements:
     - wheel
     - setuptools
   run:
-    - python >=3.6
+    - python
 
 test:
   imports:
     - pandocfilters
   requires:
     - pip
-    - python <3.10
   commands:
     - pip check
 
