--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -23,7 +23,9 @@ requirements:
     - wheel
     - setuptools
   run:
-    - python
+    # The package is not supported for the versions 3.0 to 3.3 of python
+    # https://github.com/jgm/pandocfilters/blob/master/setup.py#L19
+    - python !=3.0,!=3.1,!=3.2,!=3.3
 
 test:
   imports:
