--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -12,7 +12,7 @@ source:
   sha256: {{ sha256 }}
 
 build:
-  number: 0
+  number: 1
   noarch: python
   script: pip install --no-deps .
 
@@ -32,7 +32,7 @@ test:
     - pandocfilters
   requires:
     - pip
-    - python <3.10
+    - python
   commands:
     - pip check
 
